--- a/pi-rgb-ui/src/Styles/Sass/index.scss
+++ b/pi-rgb-ui/src/Styles/Sass/index.scss
@@ -3,4 +3,10 @@ body{
     margin: 0px;
     width: 100%;
     height: 100%;
+    background-color: rgb(48, 48, 48);
+    color: rgb(255, 255, 255);
+}
+
+h1 {
+    text-align: center;
 }
