--- a/pi-rgb-ui/src/Styles/Sass/index.scss
+++ b/pi-rgb-ui/src/Styles/Sass/index.scss
@@ -7,6 +7,10 @@ body{
     color: rgb(255, 255, 255);
 }
 
-h1 {
+.text-center {
     text-align: center;
+}
+
+.color-picker{
+    margin-left: 63.5px;
 }
