--- a/pi-rgb-ui/src/Styles/Sass/index.scss
+++ b/pi-rgb-ui/src/Styles/Sass/index.scss
@@ -5,6 +5,7 @@ body{
     height: 100%;
     background-color: rgb(48, 48, 48);
     color: rgb(255, 255, 255);
+    font-family: Roboto, sans-serif;
 }
 
 .text-center {
