--- a/pi-rgb-ui/src/Styles/Sass/index.scss
+++ b/pi-rgb-ui/src/Styles/Sass/index.scss
@@ -12,9 +12,13 @@ body{
     text-align: center;
 }
 
-.color-picker{
-    margin-left: 63.5px;
+.change-all-btn-wrapper {
+    text-align: right;
+    padding:15px;
 }
 
+.color-picker{
+    margin-left: 13.5px;
+}
 
 @import "_BrightnessChanger"
